--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,8 +8,8 @@
           </div>
           <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
             <ul class="nav navbar-nav">
-                <li><a href="#" (click)="onSelect('recipe')">Recipe List</a></li>
-                <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
+                <li><a routerLink="/" (click)="onSelect('recipe')">Recipe List</a></li>
+                <li><a routerLink="shoppinglist" (click)="onSelect('shopping-list')">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" appDropdown>
