--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,15 +8,15 @@
           </div>
           <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
             <ul class="nav navbar-nav">
-                <li><a routerLink="/" (click)="onSelect('recipe')">Recipe List</a></li>
-                <li><a routerLink="shoppinglist" (click)="onSelect('shopping-list')">Shopping List</a></li>
+                <li routerLinkActive="active"><a routerLink="recipes">Recipe List</a></li>
+                <li routerLinkActive="active"><a routerLink="shoppinglist">Shopping List</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" appDropdown>
-                    <a href="#" class="dropdown-toggle" role="button" >Manage <span class="caret"></span></a>
+                    <a class="dropdown-toggle" role="button" >Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="#">Save Data</a></li>
-                        <li><a href="#">Fetch Data</a></li>
+                        <li><a style="cursor: pointer;" >Save Data</a></li>
+                        <li><a style="cursor: pointer;">Fetch Data</a></li>
                     </ul>
                 </li>
             </ul>
