--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,7 @@
 <div class="row">
     <div class="col-xs-12">
         <app-recipe-item 
-         *ngFor="let recipeEl of recipes"
-          [recipe]="recipeEl"></app-recipe-item>
+         *ngFor="let recipeEl of recipes; let i=index"
+          [recipe]="recipeEl" [id]="i"></app-recipe-item>
     </div>
 </div>
