--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -18,7 +18,7 @@
             </button>
             <ul class="dropdown-menu">
                 <li><a (click)="AddToShopping()" style="cursor: pointer;">To shopping list</a></li>
-                <li><a style="cursor: pointer;">Edit Recipe</a></li>
+                <li><a style="cursor: pointer;" (click)="onEdit()">Edit Recipe</a></li>
                 <li><a style="cursor: pointer;">Delete Recipe</a></li>
             </ul>
         </div>
