Making items editable

--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,7 +5,8 @@
         <a 
         class="list-group-item"
         style="cursor: pointer;"
-        *ngFor="let ingr of ingredients" >
+        *ngFor="let ingr of ingredients; let i=index" 
+        (click)="onEdit(i)">
         
         {{ingr.name}} ({{ingr.amount}})
     </a>
