--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,1 +1,95 @@
-<p>hi</p>
+<div class="row">
+    <div class="col-md-12">
+        <form [formGroup]="Myform" (ngSubmit)="ngOnAddOrUpdate()">
+            <div class="row">
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-success" 
+                    [disabled]="!Myform.valid">
+                       {{ editMode ? 'Save' : 'Add'}}</button>
+                    <button type="button" class="btn btn-danger">Cancel</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="name">Name</label>
+                        <input
+                            type="text"
+                            id="name"
+                            class="form-control"
+                            formControlName="name"
+                            >
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="imagePath">Image URL</label>
+                        <input
+                            type="text"
+                            id="imagePath"
+                            class="form-control"
+                            formControlName="imageURL"
+                            >
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <img src="" class="img-responsive" >
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form-group">
+                        <label for="description">Description</label>
+                        <textarea
+                            type="text"
+                            id="description"
+                            class="form-control"
+                            rows="6"
+                            formControlName="description"
+                        ></textarea>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <!-- {{controls |json }} -->
+                <div class="col-xs-12" formArrayNames="ingredients">
+                    <div
+                     class="row"
+                     
+                     *ngFor="let ingrFrmGrp of Myform.get('ingredients')['controls']; let i=index"
+                     [formGroupName]="i"
+                    style="margin-top: 10px;"
+                    >
+                        <div class="col-xs-8">
+                            <input
+                             type="text"
+                              class="form-control"
+                              formControlName="ingrName"
+                              >
+                        </div>
+                        <div class="col-xs-2">
+                            <input 
+                            type="number" 
+                            class="form-control"
+                            formControlName="ingrAmount"
+                           >
+                        </div>
+                        <div class="col-xs-2">
+                            <button class="btn btn-danger">X</button>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <button type="button" class="btn btn-success" (click)="onAddIngredient()">Add Ingredient</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
