Delete, and Update recipes

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -6,7 +6,7 @@
                     <button type="submit" class="btn btn-success" 
                     [disabled]="!Myform.valid">
                        {{ editMode ? 'Save' : 'Add'}}</button>
-                    <button type="button" class="btn btn-danger">Cancel</button>
+                    <button type="button" class="btn btn-danger" (click)="onCancel()">Cancel</button>
                 </div>
             </div>
             <div class="row">
