--- a/src/app/recipes/recipe-details/recipe-details.component.html
+++ b/src/app/recipes/recipe-details/recipe-details.component.html
@@ -19,7 +19,7 @@
             <ul class="dropdown-menu">
                 <li><a (click)="AddToShopping()" style="cursor: pointer;">To shopping list</a></li>
                 <li><a style="cursor: pointer;" (click)="onEdit()">Edit Recipe</a></li>
-                <li><a style="cursor: pointer;">Delete Recipe</a></li>
+                <li><a style="cursor: pointer;" (click)="onDelete()">Delete Recipe</a></li>
             </ul>
         </div>
     </div>
