--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -31,13 +31,14 @@
                             id="imagePath"
                             class="form-control"
                             formControlName="imageURL"
+                            #imagePath
                             >
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <img src="" class="img-responsive" >
+                    <img [src]="imagePath.value" class="img-responsive" >
                 </div>
             </div>
             <div class="row">
@@ -79,7 +80,7 @@
                            >
                         </div>
                         <div class="col-xs-2">
-                            <button class="btn btn-danger">X</button>
+                            <button type="button" class="btn btn-danger" (click)="onRemoveIngredient(i)">X</button>
                         </div>
                     </div>
                     <hr>
