--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,7 @@
             <ul class="nav navbar-nav">
                 <li routerLinkActive="active"><a routerLink="recipes">Recipe List</a></li>
                 <li routerLinkActive="active"><a routerLink="shoppinglist">Shopping List</a></li>
+                <li routerLinkActive="active"><a routerLink="auth">Authentication</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" appDropdown>
