--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,12 +8,15 @@
           </div>
           <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
             <ul class="nav navbar-nav">
-                <li routerLinkActive="active"><a routerLink="recipes">Recipe List</a></li>
+                <li routerLinkActive="active" *ngIf="isAuthenticated"><a routerLink="recipes">Recipe List</a></li>
                 <li routerLinkActive="active"><a routerLink="shoppinglist">Shopping List</a></li>
-                <li routerLinkActive="active"><a routerLink="auth">Authentication</a></li>
+                <li routerLinkActive="active" *ngIf="!isAuthenticated"><a routerLink="auth">Authentication</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown" appDropdown>
+                <li>
+                    <a style="cursor: pointer;" *ngIf="isAuthenticated" (click)="onLogout()">Logout</a>
+                </li>
+                <li class="dropdown" appDropdown *ngIf="isAuthenticated">
                     <a class="dropdown-toggle" role="button" >Manage <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a style="cursor: pointer;" (click)="onPostData()">Save Data</a></li>
