--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -57,7 +57,7 @@
             </div>
             <div class="row">
                 <!-- {{controls |json }} -->
-                <div class="col-xs-12" formArrayNames="ingredients">
+                <div class="col-xs-12" formArrayName="ingredients">
                     <div
                      class="row"
                      
